--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.25",
+    "expo-auth-session": "~6.0.4",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
+    "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
@@ -39,7 +42,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "lucide-react-native": "^0.344.0"
+    "lucide-react-native": "^0.344.0",
+    "@expo-google-fonts/inter": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
